fix: make sure code elements wrap content

--- a/cdn/css/webui.css
+++ b/cdn/css/webui.css
@@ -742,6 +742,7 @@ code {
     outline: 1.5px solid var(--theme);
     white-space: pre-wrap;
     overflow: hidden;
+    word-break: break-all;
 }
 
 pre>code {
